--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -26,5 +26,7 @@ jobs:
       run: npm install
     - name: Install playwright 
       run: npx playwright install 
+    - name: Start the application
+      run: npm run start &
     - name: Run UI tests
       run: npm run test:ui
