--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -1,5 +1,3 @@
-# This workflow will do a clean installation of node dependencies, cache/restore them, build the source code and run tests across different versions of node
-# For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-nodejs
 
 name: Test, Build and Deploy
 
@@ -24,9 +22,17 @@ jobs:
         cache: 'npm'
     - name: Install dependencies
       run: npm install
+    - name: Show my softuni name
+      run: echo '@daniel124'
     - name: Install playwright 
       run: npx playwright install 
     - name: Start the application
       run: npm run start &
-    - name: Run UI tests
-      run: npm run test:ui
+    - name: Run Unit tests
+      run: npm run test:unit
+  Test:
+    runs-on: ubuntu-latest
+    needs: build
+    steps: 
+      - name: Run UI tests
+        run: npm run test:ui
