--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -31,8 +31,17 @@ jobs:
   Test:
     runs-on: ubuntu-latest
     needs: build
-    steps: 
-      - name: Install playwright 
-        run: npx playwright install 
+    steps:
+      - name: Checkout the repository
+        uses: actions/checkout@v3
+      - name: Use Node.js 20.x
+        uses: actions/setup-node@v3
+        with:
+          node-version: 20.x
+          cache: 'npm'
+      - name: Install dependencies
+        run: npm install
+      - name: Start the application
+        run: npm run start &
       - name: Run UI tests
-        run: npx playwright test
+        run: npm run test:ui
