--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -43,5 +43,7 @@ jobs:
         run: npm install
       - name: Start the application
         run: npm run start &
+      - name: Inastall playwright
+        run: npx playwright install 
       - name: Run UI tests
         run: npm run test:ui
