--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -47,3 +47,13 @@ jobs:
         run: npx playwright install 
       - name: Run UI tests
         run: npm run test:ui
+
+  Deploy:
+    runs-on: ubuntu-latest
+    needs: Test 
+    steps:
+      - name: Deploy to production
+        uses: johnbeynon/render-deploy-action@v0.0.8
+        with:
+          service-id: ${{ secrets.MY_RENDER_SERVICE_ID }}
+          api-key: ${{ secrets.MY_RENDER_API_KEY }}
